syntax = "proto3";
package fsm;

message StateTransitionSet { repeated StateTransition events = 1; }

message PeerLost { uint64 Peer = 1; }

message AccountCreated {
  string ID = 1; // uuid
  string Name = 2;
  repeated string Principals = 3;      // auth0 user id
  repeated string DeviceUsernames = 4; // the old 'vx:psk'
  int64 CreatedAt = 5;
}
message AccountDeleted { string ID = 1; }
message AccountDeviceUsernameAdded {
  string ID = 1;
  string DeviceUsername = 2;
}
message AccountDeviceUsernameRemoved {
  string ID = 1;
  string DeviceUsername = 2;
}

message DeviceCreated {
  string ID = 1;
  string Owner = 2;
  string Name = 3;
  bool Active = 4;
  string Password = 5;
  int64 CreatedAt = 6;
}
message DeviceDeleted {
  string ID = 1;
  string Owner = 2;
}
message DeviceEnabled {
  string ID = 1;
  string Owner = 2;
}
message DeviceDisabled {
  string ID = 1;
  string Owner = 2;
}
message DevicePasswordChanged {
  string ID = 1;
  string Owner = 2;
  string Password = 3;
}
message ApplicationCreated {
  string ID = 1;
  string AccountID = 2;
  string Name = 3;
  int64 CreatedAt = 4;
}
message ApplicationDeleted { string ID = 1; }
message ApplicationProfileCreated {
  string ID = 1;
  string ApplicationID = 2;
  string AccountID = 3;
  string Name = 4;
  int64 CreatedAt = 5;
}
message ApplicationProfileDeleted { string ID = 1; }

message StateTransition {
  oneof Event {
    PeerLost PeerLost = 1;
    DeviceCreated DeviceCreated = 2;
    DeviceDeleted DeviceDeleted = 3;
    DeviceEnabled DeviceEnabled = 4;
    DeviceDisabled DeviceDisabled = 5;
    DevicePasswordChanged DevicePasswordChanged = 6;
    AccountCreated AccountCreated = 7;
    AccountDeleted AccountDeleted = 8;
    AccountDeviceUsernameAdded AccountDeviceUsernameAdded = 9;
    AccountDeviceUsernameRemoved AccountDeviceUsernameRemoved = 10;
    ApplicationCreated ApplicationCreated = 11;
    ApplicationDeleted ApplicationDeleted = 12;
    ApplicationProfileCreated ApplicationProfileCreated = 13;
    ApplicationProfileDeleted ApplicationProfileDeleted = 14;
  }
}
